deploy/openshift/deployment/search-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moj-search-app
  labels:
    app: moj-search-app
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"search-app:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"moj-search-app\")].image"}]'  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moj-search-app
  template:
    metadata:
      annotations:
        "instrumentation.opentelemetry.io/inject-python": "true"
      labels:
        app: moj-search-app
    spec:
      containers:
      - name: moj-search-app
        image: 'image-registry.openshift-image-registry.svc:5000/moj-vector-data/search-app:latest'
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 70
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 50
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: moj-search-app
  labels:
    app: moj-search-app  
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: moj-search-app
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: moj-search-app
  labels:
    app: moj-search-app  
spec:
  to:
    kind: Service
    name: moj-search-app
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
